# fintrak-loader

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
config/: db.py
core/: fingerprint.py  importer.py  ocr.py
importers/: bb.py  c6_checking.py  cibic_checking.py  cibic_savings.py  mbna.py  nu.py  pcfinancial.py  rbc.py  receipt_ocr.py
services/: account_service.py  sub_transaction_service.py  transaction_service.py  transaction_type_service.py
src/: README.md  index.js
tests/: README.md  __init__.py  conftest.py  test_bb_importer.py  test_c6_checking_importer.py  test_cibic_checking_importer.py  test_cibic_savings_importer.py  test_fingerprint.py  test_logger.py  test_main.py  test_nu_importer.py  test_pcfinancial_importer.py  test_transaction_service.py
utils/: date_utils.py  logger.py
